-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
The latest update of the JVM spec (05/03/2024) changed the exception thrown by monitorenter/monitorexit when executed on an instance of a value class, from IllegalMonitorStateException to IdentityException.
The implementation needs to be updated to comply with this spec change.
The implementation needs to be updated to comply with this spec change.
- links to
-
Commit
openjdk/valhalla/0ea02dad
-
Review(lworld)
openjdk/valhalla/1108