8332387: [lworld] monitorenter on value class instances must throw IdentityException instead of IllegalMonitorStateException

Reviewed-by: heidinga